// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Btn não chama onPress quando loading=true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2f6433",
      "borderColor": "#4a9050",
      "borderRadius": 8,
      "borderWidth": 0.5,
      "height": 40,
      "justifyContent": "center",
      "opacity": 0.6,
      "paddingHorizontal": 16,
    }
  }
>
  <ActivityIndicator
    color="#d4f0d5"
    size="small"
  />
</View>
`;

exports[`Btn renderiza variante danger 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#3a1010",
      "borderColor": "#7a2020",
      "borderRadius": 8,
      "borderWidth": 0.5,
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 13,
          "fontWeight": "600",
        },
        {
          "color": "#e07070",
        },
      ]
    }
  >
    Danger
  </Text>
</View>
`;

exports[`Btn renderiza variante ghost 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#2a4a2c",
      "borderRadius": 8,
      "borderWidth": 0.5,
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 13,
          "fontWeight": "600",
        },
        {
          "color": "#6a9a6c",
        },
      ]
    }
  >
    Ghost
  </Text>
</View>
`;

exports[`Btn renderiza variante primary por padrão 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2f6433",
      "borderColor": "#4a9050",
      "borderRadius": 8,
      "borderWidth": 0.5,
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 13,
          "fontWeight": "600",
        },
        {
          "color": "#d4f0d5",
        },
      ]
    }
  >
    Primary
  </Text>
</View>
`;
